--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -40,5 +40,6 @@ hermesEnabled=true
 
 MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
 MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
-MYAPP_UPLOAD_STORE_PASSWORD=C3mm3090
-MYAPP_UPLOAD_KEY_PASSWORD=C3mm3090
+# Passwords should be set in local.properties or environment variables
+# MYAPP_UPLOAD_STORE_PASSWORD=
+# MYAPP_UPLOAD_KEY_PASSWORD=
